# tabularis

./: .gitignore  AGENTS.md  CHANGELOG.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.it.md  README.ko.md  README.md  README.zh-CN.md  SPONSORS.md  package.json  pnpm-lock.yaml  roadmap.json
.github/workflows/: aur.yml  ci.yml  release.yml
demo/: demo-database.sql  notebook-showcase.tabularis-notebook
plugins/: PLUGIN_GUIDE.md  manifest.schema.json  registry.json
scripts/: generate-og.html
snap/: snapcraft.yaml
src/: App.tsx  index.css  main.tsx  pluginApi.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  ai_models.yaml  commands.rs  config.rs  dump_commands.rs  lib.rs  models.rs  models_tests.rs  pool_manager.rs  query_history.rs  query_history_tests.rs  saved_queries.rs  saved_queries_tests.rs
src-tauri/src/drivers/: driver_trait.rs
src-tauri/src/drivers/mysql/: extract.rs  mod.rs
src-tauri/src/drivers/postgres/: extract.rs  mod.rs
src-tauri/src/drivers/postgres/extract/: array.rs  common.rs  composite.rs  enum.rs  mod.rs  multi_range.rs
src-tauri/src/drivers/postgres/extract2/: array.rs  common.rs  composite.rs  mod.rs  simple.rs
src-tauri/src/drivers/sqlite/: mod.rs
src-tauri/tests/: integration_tests.rs
src/config/: shortcuts.json
src/contexts/: EditorProvider.tsx  PluginSlotProvider.tsx  QueryHistoryContext.ts  QueryHistoryProvider.tsx  SettingsContext.ts  SettingsProvider.tsx  ThemeProvider.tsx
src/hooks/: useGlobalShortcuts.ts  usePluginApi.ts  usePluginRegistry.ts  useQueryHistory.ts  useSidebarResize.ts
src/i18n/: config.ts  language.ts
src/pages/: Connections.tsx  Editor.tsx  Settings.tsx
src/types/: notebook.ts  pluginSlots.ts  plugins.ts  queryHistory.ts  sidebar.ts
src/utils/: contextMenu.ts  dateGroups.ts  driverCapabilities.ts  editor.ts  explainPlan.ts  notebookChart.ts  notebookDnd.ts  notebookExport.ts  notebookFile.ts  notebookHistory.ts  notebookHtmlExport.ts  notebookParams.ts  notebookRunAll.ts  notebookSections.ts  notebookVariables.ts  settings.ts  (+5 more)
website/: package.json  tsconfig.tsbuildinfo
(+155 files in other folders)
